// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForecastItem renders correctly with subTitle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "paddingHorizontal": 14,
    }
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      }
    }
  >
    Test-Title
  </Text>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 12,
      }
    }
  >
    Test-SubTitle
  </Text>
  <Image
    source={
      {
        "uri": "https://cdn.weatherapi.com/weather/64x64/night/296.png",
      }
    }
    style={
      {
        "height": 50,
        "marginVertical": 4,
        "width": 50,
      }
    }
  />
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      }
    }
  >
    8°C
  </Text>
</View>
`;

exports[`ForecastItem renders correctly without subTitle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "paddingHorizontal": 14,
    }
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      }
    }
  >
    Test-Title
  </Text>
  <Image
    source={
      {
        "uri": "https://cdn.weatherapi.com/weather/64x64/night/296.png",
      }
    }
    style={
      {
        "height": 50,
        "marginVertical": 4,
        "width": 50,
      }
    }
  />
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      }
    }
  >
    8°C
  </Text>
</View>
`;
